# perplexed.dev

./: .gitignore  .travis.yml  CNAME  about.html  archive.html  atom.xml  contact.html  default.nix  index.html  perplexed-dev.cabal  readme.org  rss.xml  shell.nix  site.hs
css/: default.css  syntax.css
nix/: nixos-unstable.json  pkgs-from-json.nix  pkgs.nix  release.nix  site.nix  sources.json
nix/.plan.nix/: perplexed-dev.nix
posts/: 2019-11-11-org-mode-pandoc-and-hakyll.html  2019-11-11-org-mode-pandoc-and-hakyll.org
script/: silly-logo.js
tags/: emacs.html  haskell.html
templates/: default.html  post.html
