cabal-version: 2.4

name:          perplexed-dev
version:       0.1.0.0
synopsis:      Will Bush blog
homepage:      www.perplexed.dev
license:       MIT
license-file:  LICENSE
build-type:    Simple
author:        Will Bush
maintainer:    will.g.bush@gmail.com

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
  default-language: Haskell2010
  ghc-options:
    -threaded
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints